# SwarmC2-

./: .gitignore  Dockerfile  README.md  deploy.sh  mock-server.mjs  nixpacks.toml  package-lock.json  package.json  railway.json
backend/: go.mod  main.go
backend/ccsds/: ccsds.go
backend/fprime/: bridge.go  simulator.go  validation.go
backend/static/: index.html
fprime/: CMakeLists.txt  Main.cpp  settings.ini
fprime/SpaceDrone/Communications/: CMakeLists.txt  Communications.fpp
fprime/SpaceDrone/GNC/: CMakeLists.txt  GNC.fpp
fprime/SpaceDrone/HealthMonitor/: CMakeLists.txt  HealthMonitor.fpp
fprime/SpaceDrone/MissionControl/: CMakeLists.txt  MissionControl.fpp
fprime/SpaceDrone/ObjectDetection/: CMakeLists.txt  ObjectDetection.fpp
fprime/SpaceDrone/PowerManagement/: CMakeLists.txt  PowerManagement.fpp
fprime/SpaceDrone/Top/: CMakeLists.txt  SpaceDroneTopology.fpp  instances.fpp
fprime/SpaceDrone/Types/: CMakeLists.txt  SpaceDroneTypes.fpp
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: AIAnalysisPanel.jsx  AircraftList.jsx  AircraftPopup.jsx  Clock.jsx  DroneConfigPanel.jsx  DroneEventLog.jsx  DroneFSMDisplay.jsx  DronePanel.jsx  DroneTelemetryGrid.jsx  FlightMap.jsx  Globe3D.jsx  TelemetryPanel.jsx
